# baseapp-ai-langkit

./: .coverage  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  sonar-project.properties
.claude/skills/create-llm-runner/: SKILL.md
.claude/skills/ensure-test-coverage/: SKILL.md
.claude/skills/run-development-commands/: SKILL.md
.claude/skills/work-with-prompts/: SKILL.md
.github/workflows/: github-actions.yml  project-workflow.yml  publish-actions.yml  publish-workflow-test.yml  publish-workflow.yml  sonar-actions.yml  sonar-workflow.yml  widget-bundle.yml
baseapp_ai_langkit/: __init__.py  app_settings.py  apps.py  settings.py
baseapp_ai_langkit/base/: apps.py
baseapp_ai_langkit/base/agents/: agents_tools_manager.py  base_agent.py  langgraph_agent.py
baseapp_ai_langkit/base/interfaces/: base_runner.py  console.py  exceptions.py  llm_model_metadata.py  llm_node.py
baseapp_ai_langkit/base/prompt_schemas/: base_prompt_schema.py
baseapp_ai_langkit/base/tools/: base_tool.py  inline_tool.py
baseapp_ai_langkit/base/utils/: model_admin_helper.py
baseapp_ai_langkit/base/workers/: base_worker.py  messages_worker.py  orchestrator_worker.py  synthesizer_worker.py
baseapp_ai_langkit/base/workflows/: base_workflow.py  chain_of_nodes_mixin.py  conversational_workflow.py  executor_workflow.py  general_chat_workflow.py  orchestrated_conversational_workflow.py
baseapp_ai_langkit/chats/: admin.py  apps.py  checkpointer.py  managers.py  models.py
baseapp_ai_langkit/chats/migrations/: 0001_initial.py  0002_alter_chatprepromptedquestion_prompt.py  0002_chatidentity_alter_chatsession_options_and_more.py  0003_chatprepromptedquestion.py  0004_alter_chatprepromptedquestion_options_and_more.py
baseapp_ai_langkit/chats/rest_framework/: serializers.py  views.py
baseapp_ai_langkit/chats/runners/: __init__.py  default_chat_runner.py
baseapp_ai_langkit/chats/tests/: factories.py  test_checkpointer.py  test_llm_chat_chats_indentity_views.py  test_llm_chat_chats_preprompted_question_views.py  test_llm_chat_chats_views.py
baseapp_ai_langkit/embeddings/: admin.py  admin_filters.py  apps.py  context_utils.py  embedding_model.py  embedding_models.py  embedding_utils.py  model_utils.py  models.py  querysets.py  tasks.py
baseapp_ai_langkit/embeddings/chunk_generators/: __init__.py  base_chunk_generator.py  default_embeddings_generator.py  html_embeddings_generator.py
baseapp_ai_langkit/embeddings/conf/: __init__.py
baseapp_ai_langkit/embeddings/migrations/: 0001_initial.py
baseapp_ai_langkit/embeddings/tests/: factories.py
baseapp_ai_langkit/executors/: apps.py
baseapp_ai_langkit/management/commands/: agent_chain.py  llm_chat.py
baseapp_ai_langkit/rest_framework/: router.py
baseapp_ai_langkit/runners/: admin.py  apps.py  checks.py  models.py  registry.py
baseapp_ai_langkit/runners/migrations/: 0001_initial.py  0002_add_topology_layout.py  0003_add_model_catalog_and_override.py  0004_add_runner_default_model_override.py  0005_alter_available_llm_model_default_params.py
baseapp_ai_langkit/runners/model_initializers/: __init__.py  anthropic.py  base.py  gemini.py  generic.py  openai.py  openrouter.py  registry.py
baseapp_ai_langkit/runners/static/: runner_topology_widget.css  runner_topology_widget.js
baseapp_ai_langkit/runners/tests/: factories.py  test_admin_change_view.py  test_admin_initializer_dropdown.py  test_admin_runner_default_model_override.py  test_base_runner.py  test_base_runner_model_override.py  test_base_runner_runner_default_llm.py  test_default_model_metadata_check.py  test_model_initializers_registry.py  test_model_override_models.py  test_model_save_view.py  test_prompt_save_view.py  test_runner_default_model_override_models.py  test_save_runner_default_model_view.py  test_sync_runners.py  test_topology_builder_registry.py  test_topology_layout_view.py
baseapp_ai_langkit/runners/topology/: extraction_context.py  extractor.py  save_views.py  views.py
baseapp_ai_langkit/slack/: admin.py  apps.py  filters.py  models.py  permissions.py  slack_ai_chat_controller.py  slack_instance_controller.py  tasks.py
baseapp_ai_langkit/slack/event_callback_handlers/: base_event_callback_handler.py  base_slack_ai_chat_event_callback_handler.py  slack_ai_chat_app_mention_callback_handler.py  slack_ai_chat_exception_handler.py  slack_ai_chat_message_callback_handler.py  slack_ai_chat_reaction_added_callback_handler.py  slack_ai_chat_reaction_removed_callback_handler.py
baseapp_ai_langkit/slack/event_callbacks/: base_handle_event_callback.py  base_slack_event_callback.py  handle_message_callback.py  slack_ai_chat_event_callback.py  slack_event_callback.py
baseapp_ai_langkit/slack/interfaces/: slack_chat_runner.py
baseapp_ai_langkit/slack/migrations/: 0001_initial.py  0002_alter_slackaichatmessage_output_slack_event.py
baseapp_ai_langkit/tests/: factories.py  test_app_settings.py
baseapp_ai_langkit/tools/: admin.py  apps.py  models.py  vector_store_tools_helper.py
baseapp_ai_langkit/vector_stores/: admin.py  apps.py  models.py
baseapp_mcp/: README.md  __init__.py  app.py  app_settings.py  apps.py  exceptions.py  utils.py
baseapp_mcp/auth/: provider.py  tool_auth.py
baseapp_mcp/logs/: admin.py  apps.py  models.py
baseapp_mcp/middleware/: rate_limiting.py
baseapp_mcp/permissions/: __init__.py  admin.py  apps.py  models.py  signals.py
baseapp_mcp/rate_limits/: admin.py  apps.py  manager.py  models.py  utils.py
baseapp_mcp/server/: __init__.py  config.py  constants.py  django_fastmcp.py  helpers.py  lifespan.py
baseapp_mcp/tests/: conftest.py
baseapp_mcp/tools/: README.md  __init__.py  base_fetch_tool.py  base_mcp_tool.py  base_search_tool.py  base_tool.py  compat.py  fetch_tool.py  mcp_tool.py  search_tool.py
slack/: manifest-development.yml
testproject/: __init__.py  requirements.txt  settings.py  urls.py  wsig.py
testproject/settings/: base.py  env.py  test.py
(+140 files in other folders)
