[build-system]
requires = ['setuptools>=82.0.1', 'wheel>=0.46.3', 'setuptools_scm[toml]>=9.2.2']
build-backend = 'setuptools.build_meta'

[project]
name = "baseapp_ai_langkit"
version = "0.9.0"
description = "A Django app for LLM chat functionality with Langchain and Langgraph integration"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11"
authors = [
    { name = "The SilverLogic", email = "dev@tsl.io" }
]
urls = { Homepage = "https://github.com/silverlogic/baseapp-ai-langkit" }
dependencies = [
    "celery>=5.2",
    "Django>=4.2",
    "djangorestframework>=3.14",
    "django-admin-sortable2>=2.2",
    "django-constance>=3.1",
    "django-model-utils>=4.3",
    "django-nested-admin>=4.1",
    "django-pgtrigger>=4.12.2",
    "django-extensions>=3",
    "pydantic>=2.10",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9",
]

[dependency-groups]
dev = [
    "factory-boy>=3.2.1",
    "pytest>=7.0",
    "pytest-django>=4.5.0",
    "pytest-factoryboy>=2.5.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=24.4.0",
    "isort>=5.12",
    "flake8>=6.0",
    "responses>=0.25.0",
    "freezegun>=1.2.0",
    "channels>=4.0.0",
    "channels-redis>=4.0.0",
    "Pillow>=12.0.0",
]

[project.optional-dependencies]
langkit = [
    "langchain>=1.2.7,<2.0",
    "langchain-core>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.3",
    "langgraph-checkpoint>=3.0.1",
    "pygments>=2.19.2",
    "slack-sdk>=3.39.0",
    "pydash>=8.0.6",
    "beautifulsoup4>=4.14.3",
]
mcp = [
    "mcp>=1.26.0",
    "fastmcp>=3.1.1",
    "anyio>=3.0.0",
    "uvicorn>=0.35",
    "langchain>=1.2.7,<2.0",
    "baseapp-backend[api_key]"
]

# TODO: Uncomment for local development
# [tool.uv.sources]
# baseapp-backend = { path = "../baseapp-backend" }

[tool.setuptools.packages.find]
include = ["baseapp_ai_langkit*", "baseapp_mcp*"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
baseapp_ai_langkit = ["*.py", "templates/*.html", "static/*.css", "static/*.js", "migrations/*.py"]
baseapp_mcp = ["*.py", "migrations/*.py"]

[tool.uv]
required-version = "0.10.9"

[tool.black]
line-length = 100
target-version = ['py38']
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | baseapp-backend
)/
'''

[tool.isort]
profile = "black"
skip=['baseapp-backend', '.venv']
