[metadata]
name = baseapp_ai_langkit
version = 0.5.0
description = A Django app for LLM chat functionality with Langchain and Langgraph integration
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-ai-langkit
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause

[options]
include_package_data = true
packages = find:
python_requires = >=3.11
install_requires =
    celery >=5.2
    Django >= 4.2
    djangorestframework >= 3.14
    django-admin-sortable2 >= 2.2
    django-constance[database] >= 3.1
    django-model-utils >= 4.3
    django-nested-admin >= 4.1
    django-pgtrigger >= 4.12.2
    django-extensions >= 4.1
    langchain >= 0.3, <1.0
    langchain-core >= 0.3
    langchain-community >= 0.3
    langchain-openai >= 0.3
    langchain-postgres >= 0.0
    langgraph >= 0.5, <1.0
    langgraph-checkpoint-postgres >= 2.0.21, <2.1
    pydantic >= 2.10
    pygments >= 2.19
    python-dotenv >= 1.0.0
    psycopg2-binary >= 2.9
    slack-sdk >= 3.35
    pydash >= 8.0.5
    beautifulsoup4 >= 4.13.4

[options.extras_require]
dev =
    factory-boy >= 3.3.0
    pytest >= 7.0
    pytest-django >= 4.5.0
    pytest-factoryboy >= 2.5.0
    black >= 23.0
    isort >= 5.12
    flake8 >= 6.0

[options.package_data]
baseapp_ai_langkit =
    *.py
    templates/*.html
    static/*.css
    static/*.js
    migrations/*.py

[bdist_wheel]
universal = 1