[metadata]
name = baseapp_ai_langkit
version = 0.8.0
description = A Django app for LLM chat functionality with Langchain and Langgraph integration
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-ai-langkit
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause

[options]
include_package_data = true
packages = find:
python_requires = >=3.11
install_requires =
    celery >=5.2
    Django >= 4.2
    djangorestframework >= 3.14
    django-admin-sortable2 >= 2.2
    django-constance[database] >= 3.1
    django-model-utils >= 4.3
    django-nested-admin >= 4.1
    django-pgtrigger >= 4.12.2
    django-extensions >= 3
    pydantic >= 2.10
    python-dotenv >= 1.0.0
    psycopg2-binary >= 2.9

[options.extras_require]
dev =
    factory-boy >= 3.3.0
    pytest >= 7.0
    pytest-django >= 4.5.0
    pytest-factoryboy >= 2.5.0
    black >= 25.11.0
    isort >= 5.12
    flake8 >= 6.0
    responses >= 0.25.0

langkit =
    langchain >= 1.2.7, <2.0
    langchain-core >= 1.2.7
    langchain-community >= 0.4.1
    langchain-openai >= 1.1.7
    langchain-postgres >= 0.0.16
    langchain-text-splitters >= 1.1.0
    langgraph >= 1.0.7
    langgraph-checkpoint-postgres >= 3.0.3
    pygments >= 2.19.2
    slack-sdk >= 3.39.0
    pydash >= 8.0.6
    beautifulsoup4 >= 4.14.3

mcp =
    mcp >= 1.19.0
    fastmcp >= 2.13.0
    anyio >= 3.0.0
    uvicorn >= 0.20.0
    langchain >= 1.2.7, <2.0

[options.package_data]
baseapp_ai_langkit =
    *.py
    templates/*.html
    static/*.css
    static/*.js
    migrations/*.py
baseapp_mcp =
    *.py
    migrations/*.py

[bdist_wheel]
universal = 1